Fix collapsed fieldset on forms

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page/add-edit.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page/add-edit.less
@@ -32,6 +32,10 @@
     }
   }
 
+  .collapsed {
+    height: auto !important;
+  }
+
   .start-date-wrapper {
     clear: left;
   }
